[tool.poetry]
name = "mkdocstrings-bug"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mkdocstrings_bug"}]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
